# cifar_mps

./: .gitignore  README.md  pyproject.toml
cifar_mps/: __init__.py  config.py
cifar_mps/data/: dataset.py  transformations.py
cifar_mps/models/: __init__.py  resnet.py
cifar_mps/training_utils/: schedulers.py  train_n_val.py
examples/: train.py
scripts/: train.py
src/cifar_mps/: config.py
src/cifar_mps/data/: dataset.py
src/cifar_mps/models/: resnet.py
src/cifar_mps/training_utils/: finders.py  train_n_val.py
