[project]
name = "cifar-mps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jeff Wiroj", email = "pasawee2@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "dataclasses>=0.8",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

# [project.scripts]
# cifar-mps = "cifar_mps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 99
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = "cifar-mps"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "jupyterlab>=4.4.3",
    "pytest>=8.3.5",
]
