[project]
name = "cifar-mps"
version = "0.1.0"
description = "Packages to do things with cifar"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jeff Wiroj", email = "pasawee2@gmail.com" }]
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.black]
line-length = 99
target-version = ['py312']
